[[bin]]
name = "polkadot"
path = "src/main.rs"

[package]
name = "polkadot"
description = "Implementation of a https://polkadot.network node in Rust based on the Substrate framework."
license = "GPL-3.0-only"
version = "0.8.30"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
readme = "README.md"

[dependencies]
cli = { package = "polkadot-cli", path = "cli" }
color-eyre = "0.5.10"
thiserror = "1.0.23"
futures = "0.3.12"
service = { package = "polkadot-service", path = "node/service" }
parity-util-mem = { version = "*", default-features = false, features = ["jemalloc-global"] }

[dev-dependencies]
assert_cmd = "1.0.2"
nix = "0.19.1"
tempfile = "3.2.0"

[workspace]
members = [
	"bridges/primitives/kusama",
	"bridges/primitives/polkadot",
	"bridges/primitives/runtime",
	"cli",
	"core-primitives",
	"erasure-coding",
	"primitives",
	"runtime/common",
	"runtime/parachains",
	"runtime/polkadot",
	"runtime/kusama",
	"runtime/rococo",
	"runtime/westend",
	"runtime/test-runtime",
	"statement-table",
	"xcm",
	"xcm/xcm-builder",
	"xcm/xcm-executor",
	"node/collation-generation",
	"node/core/approval-voting",
	"node/core/av-store",
	"node/core/backing",
	"node/core/bitfield-signing",
	"node/core/candidate-selection",
	"node/core/candidate-validation",
	"node/core/chain-api",
	"node/core/proposer",
	"node/core/provisioner",
	"node/core/runtime-api",
	"node/network/approval-distribution",
	"node/network/bridge",
	"node/network/protocol",
	"node/network/statement-distribution",
	"node/network/bitfield-distribution",
	"node/network/availability-distribution",
	"node/network/availability-recovery",
	"node/network/collator-protocol",
	"node/network/gossip-support",
	"node/overseer",
	"node/primitives",
	"node/service",
	"node/subsystem",
	"node/subsystem/dispatch-gen",
	"node/subsystem-test-helpers",
	"node/subsystem-util",
	"node/jaeger",
	"node/metered-channel",
	"node/test/client",
	"node/test/service",
	"parachain/test-parachains",
	"parachain/test-parachains/adder",
	"parachain/test-parachains/adder/collator",
]

[badges]
maintenance = { status = "actively-developed" }

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"

[features]
runtime-benchmarks=["cli/runtime-benchmarks"]
real-overseer=["cli/real-overseer"]
try-runtime = ["cli/try-runtime"]

[patch."https://github.com/paritytech/substrate"]
node-template = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
frame-benchmarking = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
frame-support = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
frame-metadata = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-core = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-debug-derive = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-externalities = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-std = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-storage = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-runtime-interface = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-runtime-interface-proc-macro = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-tracing = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-wasm-interface = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-io = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-keystore = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-state-machine = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-panic-handler = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-trie = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-runtime = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-application-crypto = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-arithmetic = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-api = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-api-proc-macro = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-version = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-test-primitives = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
substrate-test-runtime-client = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-block-builder = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-client-api = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
substrate-prometheus-endpoint = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-executor = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-executor-common = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-allocator = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-serializer = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-executor-wasmi = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-executor-wasmtime = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-tasks = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-runtime-test = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-sandbox = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
substrate-wasm-builder = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-tracing = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-tracing-proc-macro = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
substrate-test-runtime = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
frame-system = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
frame-system-rpc-runtime-api = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-babe = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-authorship = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-authorship = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-inherents = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-session = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-timestamp = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-timestamp = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-session = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-staking = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-consensus-babe = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-consensus = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-utils = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-consensus-slots = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-consensus-vrf = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
frame-election-provider-support = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-npos-elections = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-npos-elections-compact = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
substrate-test-utils = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
substrate-test-utils-derive = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-service = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-chain-spec = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-chain-spec-derive = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-consensus-babe = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
fork-tree = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-consensus-epochs = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-consensus = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-blockchain = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-database = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-consensus-slots = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-telemetry = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-consensus-uncles = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-keystore = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-block-builder = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-network = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-peerset = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-keyring = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-network-test = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-finality-grandpa = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-network-gossip = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-finality-grandpa = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-chain-spec = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-client-db = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-state-db = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-informant = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-transaction-pool = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-light = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-offchain = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-offchain = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-transaction-pool = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-transaction-graph = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
substrate-test-runtime-transaction-pool = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-rpc = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-rpc-api = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-rpc = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-cli = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-rpc-server = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-balances = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-transaction-payment = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-offences = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-staking = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-staking-reward-curve = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-consensus-aura = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
substrate-test-client = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-runtime-interface-test-wasm = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
frame-support-procedural = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
frame-support-procedural-tools = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
frame-support-procedural-tools-derive = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
frame-benchmarking-cli = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
node-template-runtime = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
frame-executive = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-indices = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
frame-system-benchmarking = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-aura = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-grandpa = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-randomness-collective-flip = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-sudo = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-template = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-transaction-payment-rpc = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-basic-authorship = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-proposer-metrics = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-consensus-aura = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
substrate-frame-rpc-system = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
substrate-build-script-utils = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
node-bench = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
node-primitives = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
node-runtime = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
frame-try-runtime = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-assets = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-authority-discovery = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-authority-discovery = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-bounties = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-treasury = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-collective = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-contracts = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-contracts-primitives = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-contracts-proc-macro = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-contracts-rpc-runtime-api = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-democracy = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-scheduler = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-election-provider-multi-phase = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-elections-phragmen = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-gilt = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-identity = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-im-online = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-lottery = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
frame-support-test = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-membership = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-mmr = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-mmr-primitives = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-multisig = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-offences-benchmarking = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-proxy = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-utility = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-recovery = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-session-benchmarking = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-society = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-tips = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-vesting = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
node-testing = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
node-executor = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
node-browser-testing = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
node-cli = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
substrate-browser-utils = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
node-inspect = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
node-rpc = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-contracts-rpc = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-mmr-rpc = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-consensus-babe-rpc = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-finality-grandpa-rpc = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-sync-state-rpc = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-authority-discovery = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-finality-grandpa-warp-sync = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
try-runtime-cli = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
remote-externalities = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-service-test = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
substrate-frame-cli = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
test-runner-example = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-consensus-manual-seal = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
test-runner = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
node-rpc-client = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
chain-spec-builder = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
subkey = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sc-consensus-pow = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-consensus-pow = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-atomic-swap = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-elections = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-example = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-example-offchain-worker = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-example-parallel = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-nicks = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-node-authorization = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-scored-pool = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
pallet-staking-reward-fn = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-api-test = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-application-crypto-test = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-arithmetic-fuzzer = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-npos-elections-fuzzer = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-runtime-interface-test = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
sp-runtime-interface-test-wasm-deprecated = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
substrate-test-utils-test-crate = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }
substrate-frame-rpc-support = { git = "https://github.com/tomaka/polkadot", branch = "gp-warp-sync-cleanup" }

# Configuration for building a .deb package - for use with `cargo-deb`
[package.metadata.deb]
name = "polkadot"
extended-description = "Implementation of a https://polkadot.network node in Rust based on the Substrate framework."
section = "misc"
maintainer = "martin@parity.io"
license-file = ["LICENSE", "0"]
# https://www.debian.org/doc/debian-policy/ch-maintainerscripts.html
maintainer-scripts = "scripts/packaging/deb-maintainer-scripts"
assets = [
	["target/release/polkadot", "/usr/bin/", "755"],
	["scripts/packaging/polkadot.service", "/lib/systemd/system/", "644"]
]
conf-files = [
	"/etc/default/polkadot"
]

# Configuration for building an .rpm package - for use with `cargo-rpm`
[package.metadata.rpm]
package = "polkadot"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
polkadot = { path = "/usr/bin/polkadot" }

[package.metadata.rpm.files]
"../scripts/packaging/polkadot.service" = { path = "/usr/lib/systemd/system/polkadot.service", mode = "644" }
