[package]
name = "polkadot-executor"
version = "0.6.6"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Polkadot node implementation in Rust."
edition = "2018"

[dependencies]
substrate-executor = { git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
polkadot-runtime = { path = "../runtime" }
