[package]
name = "polkadot-node-browser"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Polkadot node library that can be used from JavaScript."
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.6"
futures = "0.1.17"
exit-future = "0.1"
structopt = "0.2"
service = { package = "polkadot-service", path = "../service" }

libp2p = { version = "0.11.0", default-features = false }
substrate-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-master" }
substrate-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-master" }
network = { package = "substrate-network", git = "https://github.com/paritytech/substrate", branch = "polkadot-master" }

rand = { version = "0.6", features = ["wasm-bindgen"] }
clear_on_drop = { version = "0.2.3", features = ["no_cc"] }
console_error_panic_hook = "0.1.1"
console_log = "0.1.2"
js-sys = "0.3.22"
wasm-bindgen = "0.2.45"
wasm-bindgen-futures = "0.3.22"
