[package]
name = "polkadot-primitives"
version = "0.6.6"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
parity-scale-codec = { version = "1.0.5", default-features = false, features = ["bit-vec", "derive"] }
primitives = { package = "substrate-primitives", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
application-crypto = { package = "substrate-application-crypto", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
substrate-client = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
sr-version = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
rstd = { package = "sr-std", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
runtime_primitives = { package = "sr-primitives", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
polkadot-parachain = { path = "../parachain", default-features = false }
bitvec = { version = "0.14.0", default-features = false, features = ["alloc"] }
babe = { package = "srml-babe", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }

[dev-dependencies]
substrate-serializer = { git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
pretty_assertions = "0.5.1"

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"primitives/std",
	"substrate-client/std",
	"rstd/std",
	"sr-version/std",
	"runtime_primitives/std",
	"serde",
	"polkadot-parachain/std",
	"bitvec/std",
	"babe/std"
]
