[package]
name = "polkadot-rpc"
version = "0.6.6"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
client = { package = "substrate-client", git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
jsonrpc-core = "13.2.0"
polkadot-primitives = { path = "../primitives" }
sr-primitives = { git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures"  }
substrate-rpc = { git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures"  }
srml-system-rpc = { git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures"  }
srml-transaction-payment-rpc = { git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
polkadot-runtime = { path = "../runtime" }

