[package]
name = "polkadot-runtime"
version = "0.6.6"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
bitvec = { version = "0.14.0", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "~1.0.0", default-features = false, features = ["derive"] }
log = { version = "0.3", optional = true }
rustc-hex = { version = "2.0.1", default-features = false }
safe-mix = { version = "1.0", default-features = false}
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", optional = true }

authority-discovery-primitives = { package = "substrate-authority-discovery-primitives", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
client = { package = "substrate-client", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
inherents = { package = "substrate-inherents", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
rstd = { package = "sr-std", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
sr-io = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
sr-primitives = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
sr-staking-primitives = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
substrate-primitives = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
substrate-serializer = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
substrate-session = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
version = { package = "sr-version", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }

authority-discovery = { package = "srml-authority-discovery", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
authorship = { package = "srml-authorship", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
babe = { package = "srml-babe", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
balances = { package = "srml-balances", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
transaction-payment = { package = "srml-transaction-payment", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
srml-transaction-payment-rpc-runtime-api = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
collective = { package = "srml-collective", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
democracy = { package = "srml-democracy", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
elections-phragmen = { package = "srml-elections-phragmen", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
executive = { package = "srml-executive", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
finality-tracker = { package = "srml-finality-tracker", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
grandpa = { package = "srml-grandpa", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
im-online = { package = "srml-im-online", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
indices = { package = "srml-indices", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
membership = { package = "srml-membership", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
nicks = { package = "srml-nicks", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
offences = { package = "srml-offences", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
randomness-collective-flip = { package = "srml-randomness-collective-flip", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
session = { package = "srml-session", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
srml-support = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
staking = { package = "srml-staking", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
srml-staking-reward-curve = { git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
sudo = { package = "srml-sudo", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
system = { package = "srml-system", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
system_rpc_runtime_api = { package = "srml-system-rpc-runtime-api", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
timestamp = { package = "srml-timestamp", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
treasury = { package = "srml-treasury", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }

primitives = { package = "polkadot-primitives", path = "../primitives", default-features = false }
polkadot-parachain = { path = "../parachain", default-features = false }

[dev-dependencies]
hex-literal = "0.2.0"
libsecp256k1 = "0.3.1"
tiny-keccak = "1.4.2"
keyring = { package = "substrate-keyring", git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
substrate-trie = { git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
trie-db = "0.15"
serde_json = "1.0"

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.3" }

[features]
default = ["std"]
no_std = []
only-staking = []
std = [
	"authority-discovery-primitives/std",
	"authority-discovery/std",
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"codec/std",
	"inherents/std",
	"substrate-primitives/std",
	"polkadot-parachain/std",
	"client/std",
	"offchain-primitives/std",
	"rstd/std",
	"sr-io/std",
	"srml-support/std",
	"authorship/std",
	"balances/std",
	"transaction-payment/std",
	"srml-transaction-payment-rpc-runtime-api/std",
	"collective/std",
	"elections-phragmen/std",
	"democracy/std",
	"executive/std",
	"finality-tracker/std",
	"grandpa/std",
	"im-online/std",
	"indices/std",
	"membership/std",
	"nicks/std",
	"offences/std",
	"sr-primitives/std",
	"sr-staking-primitives/std",
	"session/std",
	"staking/std",
	"sudo/std",
	"system/std",
	"system_rpc_runtime_api/std",
	"timestamp/std",
	"treasury/std",
	"version/std",
	"serde_derive",
	"serde/std",
	"log",
	"safe-mix/std",
	"babe/std",
	"babe-primitives/std",
	"substrate-session/std",
	"randomness-collective-flip/std",
]
