[package]
name = "polkadot-service"
version = "0.6.6"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parking_lot = "0.9.0"
lazy_static = "1.0"
log = "0.4.6"
futures = "0.1"
exit-future = "0.1"
slog = "^2"
hex-literal = "0.2"
av_store = { package = "polkadot-availability-store", path = "../availability-store" }
consensus = { package = "polkadot-validation", path = "../validation" }
polkadot-primitives = { path = "../primitives" }
polkadot-runtime = { path = "../runtime" }
polkadot-executor = { path = "../executor" }
polkadot-network = { path = "../network"  }
polkadot-rpc = { path = "../rpc" }
sr-io = { git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
sr-primitives = { git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
primitives = { package = "substrate-primitives", git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
client = { package = "substrate-client", git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
client-db = { package = "substrate-client-db", git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
substrate-executor = { git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
substrate-network = { git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
consensus_common = { package = "substrate-consensus-common", git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
grandpa = { package = "substrate-finality-grandpa", git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
grandpa_primitives = { package = "substrate-finality-grandpa-primitives", git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
inherents = { package = "substrate-inherents", git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
service = { package = "substrate-service", git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
telemetry = { package = "substrate-telemetry", git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
substrate-keystore = { git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
srml-babe = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
srml-staking = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
im-online = { package = "srml-im-online", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
authority-discovery = { package = "substrate-authority-discovery", git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
babe = { package = "substrate-consensus-babe", git = "https://github.com/tomaka/polkadot", branch = "diagnose-futures" }
babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "diagnose-futures" }
